# crm

./: .env.example  .gitignore  SEARCHER_SETUP.md  biome.json  mise.toml  package.json  readme  readme.md
.github/: copilot-instructions.md
.github/workflows/: lint.yml
apps/backend/: package.json  tsconfig.json
apps/backend/src/: index.ts  types.ts
apps/crm/: .gitignore  biome.json  package.json
apps/crm/src/: app.css  app.tsx  middleware.ts
apps/engine/: .env.example  .gitignore  Cargo.toml  readme.md
apps/engine/data/: .gitignore
apps/engine/src/: config.rs  csv_loader.rs  data.rs  error.rs  hmac_auth.rs  lib.rs  main.rs  rate_limit.rs  routes.rs  search.rs  search_index.rs  types.rs  validation.rs
apps/engine/src/api/: mod.rs  state.rs
apps/engine/src/api/routes/: audit.rs  health.rs  leads.rs  mod.rs  quota.rs  search.rs
apps/engine/src/middleware/: auth.rs  mod.rs  rate.rs  user.rs
apps/engine/src/service/: audit.rs  index.rs  mod.rs  quota.rs  types.rs
apps/engine/tests/: assignments_test.rs  auth_test.rs  search_test.rs
apps/engine/tests/fixtures/: test_data.csv
apps/frontend/: app.config.ts  package.json
apps/lookup/: Cargo.toml  readme.md
apps/lookup/src/: api.rs  auth.rs  config.rs  data.rs  error.rs  errors.rs  index.rs  main.rs  rate_limit.rs  service.rs  types.rs
apps/lookup/src/api/: mod.rs  state.rs
apps/lookup/src/api/routes/: health.rs  leads.rs  mod.rs  stats.rs
apps/lookup/src/middleware/: auth.rs  rate.rs
apps/lookup/src/service/: index.rs  mod.rs  types.rs
apps/searcher/: .gitignore  CSV_FORMAT_README.md  Cargo.toml  README.md
apps/searcher/src/: data.rs  errors.rs  handlers.rs  index.rs  main.rs  server.rs  service.rs  types.rs
apps/web/: .env.example  .gitignore  app.config.ts  package.json  test-auth.ts  tsconfig.json
patches/: @node-rs+argon2@2.0.2.patch  @tanstack+directive-functions-plugin@1.121.21.patch
(+352 files in other folders)
