[package]
name = "crm-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
csv = "1.4.0"
dashmap = "6.1.0"
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "compression-gzip", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
axum-test = "18.7.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
